//Entity relationship diagram of relationships in the system.

Table PeripheralDevice {
  id int [pk, increment]
  public_key varchar [note: 'Public key of the peripheral device']
  private_key varchar [note: 'Private key of the peripheral device']
}

Table CentralDevice {
  id int [pk, increment]
  public_key varchar [note: 'Public key of the central device']
  private_key varchar [note: 'Private key of the central device']
}

Table Measurement {
  id int [pk, increment]
  peripheral_device_id int [ref: > PeripheralDevice.id]
  central_device_id int [ref: > CentralDevice.id]
  timestamp datetime
  measurement_value varchar
  peripheral_device_signature varchar [note: 'Digital signature of the peripheral device']
  central_device_receive_time datetime
  central_device_signature varchar [note: 'Digital signature of the central device']
  transaction_id int [ref: > Transaction.id]
}

Table Transaction {
  id int [pk, increment]
  validator_id int [ref: > Validator.id]
  validity_criteria varchar [note: 'Criteria set for transaction validity']
  is_valid boolean [note: 'Flag indicating transaction validity']
  block_id int [ref: > Block.id]
}

Table Block {
  id int [pk, increment]
  block_hash varchar [note: 'Hash of the block']
  previous_block_hash varchar [note: 'Hash of the preceding block']
}

Table Validator {
  id int [pk, increment]
  name varchar
  reputation_score int
}

// PeripheralDevice -- Measurement : "Generates" -- "Is Generated by"
// CentralDevice -- Measurement : "Receives" -- "Is Received by"
// Measurement -- Transaction : "Forms" -- "Is Formed in"
// Transaction -- Validator : "Validated by" -- "Validates"
// Transaction -- Block : "Belongs to" -- "Is Contained in"
// Block -- Block : "Links to" -- "Is Linked by"
